--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write ./src/",
-    "lint:js": "eslint ./src/**/*.js",
-    "lint:css": "stylelint ./src/**/*.css",
+    "lint:js": "eslint ./cardGame/**/*.js",
+    "lint:css": "stylelint ./cardGame/**/*.css",
     "lint": "npm run lint:js && npm run lint:css",
     "prepare": "husky install"
   },  
