--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
     "extends": ["eslint:recommended", "prettier"],
     "plugins": ["prettier"],
     "parserOptions": {
-        "ecmaVersion": 2020
+        "ecmaVersion": 2020,
+        "sourceType": "module",
+        "allowImportExportEverywhere": true
     },
     "rules": {
         "prettier/prettier": [
@@ -15,8 +17,6 @@
             {
                 "endOfLine": "auto"
             }
-        ],
-        "camelcase": ["error"],
-        "eqeqeq": ["error", "always"]
+        ]
     }
 }
