--- a/package.json
+++ b/package.json
@@ -1,47 +1,55 @@
 {
-  "name": "packforcardgame",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=production webpack",
-    "start": "webpack-dev-server --open",
-    "format": "prettier --write ./src/",
-    "lint:js": "eslint ./cardGame/**/*.js",
-    "lint:css": "stylelint ./cardGame/**/*.css",
-    "lint": "npm run lint:js && npm run lint:css",
-    "prepare": "husky install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DimonStarter/myFirstGame.git"
-  },
-  "author": "gorokhov.diman@mail.ru",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DimonStarter/myFirstGame/issues"
-  },
-  "homepage": "https://github.com/DimonStarter/myFirstGame#readme",
-  "devDependencies": {
-    "css-loader": "^6.7.3",
-    "css-minimizer-webpack-plugin": "^4.2.2",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "html-webpack-plugin": "^5.5.0",
-    "husky": "^8.0.3",
-    "mini-css-extract-plugin": "^2.7.4",
-    "prettier": "2.8.4",
-    "stylelint": "^14.16.1",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-prettier": "^3.0.0",
-    "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.12.0"
-  },
-  "dependencies": {
-    "copy-webpack-plugin": "^11.0.0",
-    "save-dev": "^0.0.1-security"
-  }
+    "name": "packforcardgame",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "NODE_ENV=production webpack",
+        "start": "webpack-dev-server --open",
+        "format": "prettier --write ./src/",
+        "lint:js": "eslint ./cardGame/**/*.js",
+        "lint:css": "stylelint ./cardGame/**/*.css",
+        "lint": "npm run lint:js && npm run lint:css",
+        "prepare": "husky install",
+        "lint:ts": "tsc --noEmit"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/DimonStarter/myFirstGame.git"
+    },
+    "author": "gorokhov.diman@mail.ru",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/DimonStarter/myFirstGame/issues"
+    },
+    "homepage": "https://github.com/DimonStarter/myFirstGame#readme",
+    "devDependencies": {
+        "@babel/core": "^7.21.3",
+        "@babel/eslint-parser": "^7.21.3",
+        "@typescript-eslint/eslint-plugin": "^5.56.0",
+        "@typescript-eslint/parser": "^5.56.0",
+        "css-loader": "^6.7.3",
+        "css-minimizer-webpack-plugin": "^4.2.2",
+        "eslint": "^8.36.0",
+        "eslint-config-prettier": "^8.7.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "html-webpack-plugin": "^5.5.0",
+        "husky": "^8.0.3",
+        "mini-css-extract-plugin": "^2.7.4",
+        "prettier": "2.8.4",
+        "stylelint": "^14.16.1",
+        "stylelint-config-prettier": "^9.0.5",
+        "stylelint-config-standard": "^29.0.0",
+        "stylelint-prettier": "^3.0.0",
+        "ts-loader": "^9.4.2",
+        "typescript": "^5.0.2",
+        "webpack": "^5.76.1",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.12.0"
+    },
+    "dependencies": {
+        "copy-webpack-plugin": "^11.0.0",
+        "save-dev": "^0.0.1-security"
+    }
 }
