--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "build": "NODE_ENV=production webpack",
         "start": "webpack-dev-server --open",
         "format": "prettier --write ./src/",
@@ -25,8 +25,8 @@
     },
     "homepage": "https://github.com/DimonStarter/myFirstGame#readme",
     "devDependencies": {
-        "@babel/core": "^7.21.3",
         "@babel/eslint-parser": "^7.21.3",
+        "@types/jest": "^29.5.0",
         "@typescript-eslint/eslint-plugin": "^5.56.0",
         "@typescript-eslint/parser": "^5.56.0",
         "css-loader": "^6.7.3",
@@ -42,6 +42,7 @@
         "stylelint-config-prettier": "^9.0.5",
         "stylelint-config-standard": "^29.0.0",
         "stylelint-prettier": "^3.0.0",
+        "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.2",
         "webpack": "^5.76.1",
@@ -50,6 +51,7 @@
     },
     "dependencies": {
         "copy-webpack-plugin": "^11.0.0",
+        "jest": "^29.5.0",
         "save-dev": "^0.0.1-security"
     }
 }
